--- a/index.html
+++ b/index.html
@@ -2,67 +2,160 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Animated Placeholder</title>
+  <title>Parametric Building Design</title>
   <style>
-    body {
+    body, html {
       margin: 0;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: #111;
-      font-family: 'Arial', sans-serif;
-    }
-
-    .container {
-      display: flex;
-      gap: 10px;
-    }
-
-    .digit {
-      width: 40px;
-      height: 40px;
-      background-color: #333;
+      padding: 0;
+      overflow: hidden;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #0e0e0e;
       color: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 24px;
-      border-radius: 5px;
-      animation: rotateDigits 1s linear infinite;
     }
 
-    /* Define the animation */
-    @keyframes rotateDigits {
-      0% { content: '1'; }
-      25% { content: '2'; }
-      50% { content: '3'; }
-      75% { content: '4'; }
-      100% { content: '5'; }
+    #overlay {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      z-index: 10;
     }
 
-    /* This CSS rule overrides text inside the .digit */
-    .digit::before {
-      content: counter(step);
-      counter-increment: step 1;
+    #overlay h1 {
+      margin: 0;
+      font-size: 2em;
+      letter-spacing: 2px;
     }
 
-    /* Set up a counter to rotate numbers */
-    body {
-      counter-reset: step 1;
+    #overlay p {
+      margin-top: 10px;
+      max-width: 400px;
+      line-height: 1.5;
+    }
+
+    #canvas {
+      width: 100%;
+      height: 100vh;
+      display: block;
+    }
+
+    /* Loader animation */
+    #loader {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 1.5em;
+      display: none;
+    }
+
+    /* Responsive design */
+    @media only screen and (max-width: 600px) {
+      #overlay h1 {
+        font-size: 1.5em;
+      }
+      #overlay p {
+        font-size: 0.9em;
+      }
     }
   </style>
 </head>
 <body>
 
-  <div class="container">
-    <div class="digit"></div>
-    <div class="digit"></div>
-    <div class="digit"></div>
-    <div class="digit"></div>
-    <div class="digit"></div>
+  <div id="overlay">
+    <h1>Parametric Architecture</h1>
+    <p>Experience the future of building design with interactive parametric models.</p>
   </div>
 
+  <div id="loader">Loading...</div>
+  <canvas id="canvas"></canvas>
+
+  <!-- Include Three.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <!-- Include OrbitControls -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/controls/OrbitControls.js"></script>
+  <!-- Main Script -->
+  <script>
+    // Wait for the window to load
+    window.onload = function() {
+      const loader = document.getElementById('loader');
+      loader.style.display = 'block';
+
+      // Scene, Camera, Renderer
+      const scene = new THREE.Scene();
+      scene.background = new THREE.Color(0x0e0e0e);
+      const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 1, 1000);
+      camera.position.set(0, 50, 200);
+
+      const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('canvas'), antialias: true });
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      renderer.shadowMap.enabled = true;
+
+      // Add Lights
+      const ambientLight = new THREE.AmbientLight(0x404040, 2);
+      scene.add(ambientLight);
+
+      const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
+      directionalLight.position.set(50, 100, 50);
+      directionalLight.castShadow = true;
+      scene.add(directionalLight);
+
+      // Controls
+      const controls = new THREE.OrbitControls(camera, renderer.domElement);
+      controls.enableDamping = true;
+
+      // Parametric Building Geometry
+      const building = new THREE.Group();
+
+      // Parameters
+      const floors = 20;
+      const radius = 20;
+      const heightPerFloor = 3;
+
+      for (let i = 0; i < floors; i++) {
+        const angle = i * 0.1;
+        const floorHeight = i * heightPerFloor;
+
+        const geometry = new THREE.CylinderGeometry(radius, radius, heightPerFloor, 32, 1, false);
+        const material = new THREE.MeshStandardMaterial({ color: new THREE.Color(`hsl(${i * 10}, 80%, 50%)`), metalness: 0.5, roughness: 0.1 });
+        const floor = new THREE.Mesh(geometry, material);
+        floor.position.y = floorHeight;
+        floor.rotation.y = angle;
+
+        floor.castShadow = true;
+        floor.receiveShadow = true;
+
+        building.add(floor);
+      }
+
+      scene.add(building);
+
+      // Ground Plane
+      const planeGeometry = new THREE.PlaneGeometry(500, 500);
+      const planeMaterial = new THREE.MeshStandardMaterial({ color: 0x222222 });
+      const plane = new THREE.Mesh(planeGeometry, planeMaterial);
+      plane.rotation.x = -Math.PI / 2;
+      plane.receiveShadow = true;
+      scene.add(plane);
+
+      // Animation Loop
+      function animate() {
+        requestAnimationFrame(animate);
+        controls.update();
+        renderer.render(scene, camera);
+      }
+
+      // Handle Window Resize
+      window.addEventListener('resize', onWindowResize, false);
+      function onWindowResize() {
+        camera.aspect = window.innerWidth / window.innerHeight;
+        camera.updateProjectionMatrix();
+        renderer.setSize(window.innerWidth, window.innerHeight);
+      }
+
+      // Remove Loader and Start Animation
+      loader.style.display = 'none';
+      animate();
+    };
+  </script>
 </body>
 </html>
