--- a/index.html
+++ b/index.html
@@ -2,164 +2,148 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Parametric Building Design</title>
+  <title>Parametric Architecture</title>
   <style>
-    body, html {
+    /* Reset default styles */
+    * {
       margin: 0;
       padding: 0;
-      overflow: hidden;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #0e0e0e;
-      color: #fff;
+      box-sizing: border-box;
     }
 
-    #overlay {
-      position: absolute;
-      top: 20px;
-      left: 20px;
-      z-index: 10;
-    }
-
-    #overlay h1 {
-      margin: 0;
-      font-size: 2em;
-      letter-spacing: 2px;
-    }
-
-    #overlay p {
-      margin-top: 10px;
-      max-width: 400px;
-      line-height: 1.5;
-    }
-
-    #canvas {
+    /* Body styles */
+    body, html {
       width: 100%;
-      height: 100vh;
-      display: block;
+      height: 100%;
+      overflow: hidden;
+      background-color: #111;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
-    /* Loader animation */
-    #loader {
+    /* Container */
+    .container {
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
+
+    /* Animated background */
+    .animated-bg {
+      position: absolute;
+      width: 200%;
+      height: 200%;
+      top: -50%;
+      left: -50%;
+      background: radial-gradient(circle at center, #0e0e0e, #111);
+      overflow: hidden;
+    }
+
+    /* Geometric shape (hexagon) */
+    .hexagon {
+      position: absolute;
+      width: 120px;
+      height: 69.28px; /* Height = sin(60deg) * width */
+      background-color: rgba(0, 128, 255, 0.15);
+      margin: 34.64px 0;
+      animation: animateHex 20s linear infinite;
+    }
+
+    .hexagon:before,
+    .hexagon:after {
+      content: "";
+      position: absolute;
+      width: 0;
+      border-left: 60px solid transparent;
+      border-right: 60px solid transparent;
+    }
+
+    .hexagon:before {
+      bottom: 100%;
+      border-bottom: 34.64px solid rgba(0, 128, 255, 0.15);
+    }
+
+    .hexagon:after {
+      top: 100%;
+      border-top: 34.64px solid rgba(0, 128, 255, 0.15);
+    }
+
+    @keyframes animateHex {
+      0% {
+        transform: translateY(0) rotate(0deg) scale(1);
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(-1500px) rotate(360deg) scale(0.5);
+        opacity: 0;
+      }
+    }
+
+    /* Overlay text */
+    .overlay {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      font-size: 1.5em;
-      display: none;
+      text-align: center;
+      color: #fff;
+      z-index: 1;
+    }
+
+    .overlay h1 {
+      font-size: 3em;
+      letter-spacing: 2px;
+    }
+
+    .overlay p {
+      font-size: 1.2em;
+      margin-top: 20px;
     }
 
     /* Responsive design */
     @media only screen and (max-width: 600px) {
-      #overlay h1 {
-        font-size: 1.5em;
+      .overlay h1 {
+        font-size: 2em;
       }
-      #overlay p {
-        font-size: 0.9em;
+      .overlay p {
+        font-size: 1em;
       }
     }
   </style>
 </head>
 <body>
-
-  <div id="overlay">
-    <h1>Parametric Architecture</h1>
-    <p>Experience the future of building design with interactive parametric models.</p>
+  <div class="container">
+    <div class="animated-bg">
+      <!-- Hexagons will be injected here -->
+    </div>
+    <div class="overlay">
+      <h1>Parametric Architecture</h1>
+      <p>Redefining spaces with parametric design.</p>
+    </div>
   </div>
 
-  <div id="loader">Loading...</div>
-  <canvas id="canvas"></canvas>
-
-  <!-- Include Three.js -->
-  <script src="https://unpkg.com/three@0.155.0/build/three.min.js"></script>
-  <!-- Include OrbitControls -->
-  <script src="https://unpkg.com/three@0.155.0/examples/js/controls/OrbitControls.js"></script>
-  <!-- Main Script -->
+  <!-- Minimal JavaScript -->
   <script>
-    // Wait for the window to load
-    window.onload = function() {
-      const loader = document.getElementById('loader');
-      loader.style.display = 'block';
+    const bg = document.querySelector('.animated-bg');
+    const hexagonCount = 100;
 
-      // Scene, Camera, Renderer
-      const scene = new THREE.Scene();
-      scene.background = new THREE.Color(0x0e0e0e);
-      const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 1, 1000);
-      camera.position.set(0, 50, 200);
+    for (let i = 0; i < hexagonCount; i++) {
+      const hex = document.createElement('div');
+      hex.classList.add('hexagon');
 
-      const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('canvas'), antialias: true });
-      renderer.setSize(window.innerWidth, window.innerHeight);
-      renderer.shadowMap.enabled = true;
+      // Random position
+      hex.style.left = Math.random() * 200 - 50 + '%';
+      hex.style.top = Math.random() * 200 - 50 + '%';
 
-      // Add Lights
-      const ambientLight = new THREE.AmbientLight(0x404040, 2);
-      scene.add(ambientLight);
+      // Random animation delay
+      hex.style.animationDelay = Math.random() * -20 + 's';
 
-      const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
-      directionalLight.position.set(50, 100, 50);
-      directionalLight.castShadow = true;
-      scene.add(directionalLight);
+      // Random size
+      const scale = Math.random() * 0.5 + 0.75;
+      hex.style.transform = `scale(${scale})`;
 
-      // Controls
-      const controls = new OrbitControls(camera, renderer.domElement);
-      controls.enableDamping = true;
-
-      // Parametric Building Geometry
-      const building = new THREE.Group();
-
-      // Parameters
-      const floors = 20;
-      const radius = 20;
-      const heightPerFloor = 3;
-
-      for (let i = 0; i < floors; i++) {
-        const angle = i * 0.1;
-        const floorHeight = i * heightPerFloor;
-
-        const geometry = new THREE.CylinderGeometry(radius, radius, heightPerFloor, 32);
-        const material = new THREE.MeshStandardMaterial({
-          color: new THREE.Color(`hsl(${i * 10}, 80%, 50%)`),
-          metalness: 0.5,
-          roughness: 0.1
-        });
-        const floor = new THREE.Mesh(geometry, material);
-        floor.position.y = floorHeight;
-        floor.rotation.y = angle;
-
-        floor.castShadow = true;
-        floor.receiveShadow = true;
-
-        building.add(floor);
-      }
-
-      scene.add(building);
-
-      // Ground Plane
-      const planeGeometry = new THREE.PlaneGeometry(500, 500);
-      const planeMaterial = new THREE.MeshStandardMaterial({ color: 0x222222 });
-      const plane = new THREE.Mesh(planeGeometry, planeMaterial);
-      plane.rotation.x = -Math.PI / 2;
-      plane.receiveShadow = true;
-      scene.add(plane);
-
-      // Animation Loop
-      function animate() {
-        requestAnimationFrame(animate);
-        controls.update();
-        renderer.render(scene, camera);
-      }
-
-      // Handle Window Resize
-      window.addEventListener('resize', onWindowResize, false);
-      function onWindowResize() {
-        camera.aspect = window.innerWidth / window.innerHeight;
-        camera.updateProjectionMatrix();
-        renderer.setSize(window.innerWidth, window.innerHeight);
-      }
-
-      // Remove Loader and Start Animation
-      loader.style.display = 'none';
-      animate();
-    };
+      // Append to background
+      bg.appendChild(hex);
+    }
   </script>
 </body>
 </html>
