--- a/index.html
+++ b/index.html
@@ -1,149 +1,217 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Parametric Architecture</title>
-  <style>
-    /* Reset default styles */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    /* Body styles */
-    body, html {
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      background-color: #111;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-
-    /* Container */
-    .container {
-      position: relative;
-      width: 100%;
-      height: 100%;
-    }
-
-    /* Animated background */
-    .animated-bg {
-      position: absolute;
-      width: 200%;
-      height: 200%;
-      top: -50%;
-      left: -50%;
-      background: radial-gradient(circle at center, #0e0e0e, #111);
-      overflow: hidden;
-    }
-
-    /* Geometric shape (hexagon) */
-    .hexagon {
-      position: absolute;
-      width: 120px;
-      height: 69.28px; /* Height = sin(60deg) * width */
-      background-color: rgba(0, 128, 255, 0.15);
-      margin: 34.64px 0;
-      animation: animateHex 20s linear infinite;
-    }
-
-    .hexagon:before,
-    .hexagon:after {
-      content: "";
-      position: absolute;
-      width: 0;
-      border-left: 60px solid transparent;
-      border-right: 60px solid transparent;
-    }
-
-    .hexagon:before {
-      bottom: 100%;
-      border-bottom: 34.64px solid rgba(0, 128, 255, 0.15);
-    }
-
-    .hexagon:after {
-      top: 100%;
-      border-top: 34.64px solid rgba(0, 128, 255, 0.15);
-    }
-
-    @keyframes animateHex {
-      0% {
-        transform: translateY(0) rotate(0deg) scale(1);
-        opacity: 1;
-      }
-      100% {
-        transform: translateY(-1500px) rotate(360deg) scale(0.5);
-        opacity: 0;
-      }
-    }
-
-    /* Overlay text */
-    .overlay {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-      color: #fff;
-      z-index: 1;
-    }
-
-    .overlay h1 {
-      font-size: 3em;
-      letter-spacing: 2px;
-    }
-
-    .overlay p {
-      font-size: 1.2em;
-      margin-top: 20px;
-    }
-
-    /* Responsive design */
-    @media only screen and (max-width: 600px) {
-      .overlay h1 {
-        font-size: 2em;
-      }
-      .overlay p {
-        font-size: 1em;
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Dynamic Grid with Three.js</title>
+    <style>
+        body { margin: 0; overflow: hidden; }
+        canvas { display: block; }
+        #label {
+            position: absolute;
+            color: white;
+            font-size: 24px;
+            pointer-events: none;
+            display: none;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <div class="animated-bg">
-      <!-- Hexagons will be injected here -->
-    </div>
-    <div class="overlay">
-      <h1>Parametric Architecture</h1>
-      <p>Redefining spaces with parametric design.</p>
-    </div>
-  </div>
+    <div id="label"></div>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
+    <!-- Include OrbitControls for camera control (optional) -->
+    <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/controls/OrbitControls.js"></script>
+    <script>
+        // Basic setup
+        let scene = new THREE.Scene();
+        scene.background = new THREE.Color(0x202020);
 
-  <!-- Minimal JavaScript -->
-  <script>
-    const bg = document.querySelector('.animated-bg');
-    const hexagonCount = 100;
+        let camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 1, 1000);
+        camera.position.set(100, 100, 100);
+        camera.lookAt(0, 0, 0);
 
-    for (let i = 0; i < hexagonCount; i++) {
-      const hex = document.createElement('div');
-      hex.classList.add('hexagon');
+        let renderer = new THREE.WebGLRenderer({ antialias: true });
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        document.body.appendChild(renderer.domElement);
 
-      // Random position
-      hex.style.left = Math.random() * 200 - 50 + '%';
-      hex.style.top = Math.random() * 200 - 50 + '%';
+        // Optional: OrbitControls for camera movement
+        let controls = new THREE.OrbitControls(camera, renderer.domElement);
 
-      // Random animation delay
-      hex.style.animationDelay = Math.random() * -20 + 's';
+        // Raycaster for mouse interactions
+        let raycaster = new THREE.Raycaster();
+        let mouse = new THREE.Vector2();
 
-      // Random size
-      const scale = Math.random() * 0.5 + 0.75;
-      hex.style.transform = `scale(${scale})`;
+        // Create boxes
+        let boxes = [];
+        let labels = [
+            "About Me", "Projects", "Contact",
+            "Blog", "Gallery", "Services",
+            "Testimonials", "FAQ", "Careers"
+        ];
 
-      // Append to background
-      bg.appendChild(hex);
-    }
-  </script>
+        let boxGroup = new THREE.Group();
+
+        let boxSize = 40;
+        let spacing = 40;
+        let minHeight = 15;
+        let maxHeight = 50;
+
+        for (let i = 0; i < 9; i++) {
+            let box = createBox(i);
+            boxes.push(box);
+            boxGroup.add(box);
+        }
+
+        scene.add(boxGroup);
+
+        function createBox(index) {
+            let group = new THREE.Group();
+            group.name = "Box" + index;
+
+            let initialHeight = THREE.MathUtils.randFloat(minHeight, maxHeight);
+            group.userData = {
+                height: initialHeight,
+                targetHeight: initialHeight,
+                slabs: [],
+                animating: true,
+                label: labels[index] || "Section " + (index + 1)
+            };
+
+            // Positioning in grid
+            let row = Math.floor(index / 3);
+            let col = index % 3;
+
+            group.position.x = (col - 1) * (boxSize + spacing);
+            group.position.z = (row - 1) * (boxSize + spacing);
+
+            // Create the slabs
+            updateSlabs(group);
+
+            return group;
+        }
+
+        function updateSlabs(boxGroup) {
+            // Remove existing slabs
+            while (boxGroup.children.length > 0) {
+                let child = boxGroup.children.pop();
+                child.geometry.dispose();
+                child.material.dispose();
+            }
+
+            let height = boxGroup.userData.height;
+            let numSlabs = Math.floor(height / 3);
+
+            let geometry = new THREE.PlaneGeometry(boxSize, boxSize);
+            let material = new THREE.MeshBasicMaterial({
+                color: 0x00ff00,
+                side: THREE.DoubleSide
+            });
+
+            for (let i = 0; i < numSlabs; i++) {
+                let slab = new THREE.Mesh(geometry, material);
+                slab.rotation.x = -Math.PI / 2;
+                slab.position.y = (i + 1) * 3;
+                boxGroup.add(slab);
+            }
+        }
+
+        // Animation loop
+        function animate() {
+            requestAnimationFrame(animate);
+
+            boxes.forEach(boxGroup => {
+                if (boxGroup.userData.animating) {
+                    // Randomly adjust target height
+                    if (Math.random() < 0.01) {
+                        boxGroup.userData.targetHeight = THREE.MathUtils.randFloat(minHeight, maxHeight);
+                    }
+
+                    // Smoothly animate height towards targetHeight
+                    let delta = (boxGroup.userData.targetHeight - boxGroup.userData.height) * 0.02;
+                    boxGroup.userData.height += delta;
+
+                    updateSlabs(boxGroup);
+                }
+            });
+
+            renderer.render(scene, camera);
+        }
+
+        animate();
+
+        // Mouse events
+        window.addEventListener('mousemove', onMouseMove, false);
+        window.addEventListener('click', onMouseClick, false);
+
+        function onMouseMove(event) {
+            event.preventDefault();
+
+            mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
+            mouse.y = - (event.clientY / window.innerHeight) * 2 + 1;
+
+            raycaster.setFromCamera(mouse, camera);
+
+            let intersects = raycaster.intersectObjects(boxGroup.children, true);
+
+            if (intersects.length > 0) {
+                let intersectedBox = intersects[0].object.parent;
+
+                boxes.forEach(box => {
+                    if (box === intersectedBox) {
+                        box.userData.animating = false;
+                        showLabel(event.clientX, event.clientY, box.userData.label);
+                    } else {
+                        box.userData.animating = true;
+                    }
+                });
+            } else {
+                boxes.forEach(box => box.userData.animating = true);
+                hideLabel();
+            }
+        }
+
+        function onMouseClick(event) {
+            event.preventDefault();
+
+            mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
+            mouse.y = - (event.clientY / window.innerHeight) * 2 + 1;
+
+            raycaster.setFromCamera(mouse, camera);
+
+            let intersects = raycaster.intersectObjects(boxGroup.children, true);
+
+            if (intersects.length > 0) {
+                let intersectedBox = intersects[0].object.parent;
+                let sectionName = intersectedBox.userData.label;
+
+                // Handle navigation to the section
+                alert("Navigating to " + sectionName);
+                // Replace the alert with actual navigation logic
+                // For example: window.location.href = section URLs based on sectionName
+            }
+        }
+
+        // Label display
+        let labelDiv = document.getElementById('label');
+
+        function showLabel(x, y, text) {
+            labelDiv.style.left = x + 'px';
+            labelDiv.style.top = y - 30 + 'px';
+            labelDiv.textContent = text;
+            labelDiv.style.display = 'block';
+        }
+
+        function hideLabel() {
+            labelDiv.style.display = 'none';
+        }
+
+        // Handle window resize
+        window.addEventListener('resize', onWindowResize, false);
+
+        function onWindowResize() {
+            camera.aspect = window.innerWidth / window.innerHeight;
+            camera.updateProjectionMatrix();
+            renderer.setSize(window.innerWidth, window.innerHeight);
+        }
+    </script>
 </body>
 </html>
