--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Three.js Slab Grid Example</title>
+    <title>Three.js Animated Slab Grid</title>
     <style>
         body { margin: 0; overflow: hidden; }
         canvas { display: block; }
@@ -17,7 +17,7 @@
         scene.background = new THREE.Color(0x202020);
 
         var camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 1, 1000);
-        camera.position.set(100, 100, 100);
+        camera.position.set(150, 150, 150);
         camera.lookAt(0, 0, 0);
 
         var renderer = new THREE.WebGLRenderer({ antialias: true });
@@ -32,34 +32,69 @@
         var minHeight = 15;
         var maxHeight = 50;
 
+        function createBox(i, j) {
+            var group = new THREE.Group();
+            group.userData = {
+                height: Math.random() * (maxHeight - minHeight) + minHeight,
+                targetHeight: Math.random() * (maxHeight - minHeight) + minHeight,
+                animating: true
+            };
+
+            group.position.x = (i - 1) * (boxSize + spacing);
+            group.position.z = (j - 1) * (boxSize + spacing);
+
+            updateSlabs(group);
+
+            scene.add(group);
+            boxes.push(group);
+        }
+
+        function updateSlabs(group) {
+            // Remove existing slabs
+            while (group.children.length > 0) {
+                var child = group.children.pop();
+                child.geometry.dispose();
+                child.material.dispose();
+            }
+
+            var height = group.userData.height;
+            var numSlabs = Math.floor(height / 3);
+
+            var geometry = new THREE.PlaneGeometry(boxSize, boxSize);
+            var material = new THREE.MeshBasicMaterial({ color: 0x00ff00, side: THREE.DoubleSide });
+
+            for (var k = 0; k < numSlabs; k++) {
+                var slab = new THREE.Mesh(geometry, material);
+                slab.rotation.x = -Math.PI / 2;
+                slab.position.y = (k + 1) * 3;
+                group.add(slab);
+            }
+        }
+
         for (var i = 0; i < gridSize; i++) {
             for (var j = 0; j < gridSize; j++) {
-                var group = new THREE.Group();
-
-                var height = Math.random() * (maxHeight - minHeight) + minHeight;
-                var numSlabs = Math.floor(height / 3);
-
-                var geometry = new THREE.PlaneGeometry(boxSize, boxSize);
-                var material = new THREE.MeshBasicMaterial({ color: 0x00ff00, side: THREE.DoubleSide });
-
-                for (var k = 0; k < numSlabs; k++) {
-                    var slab = new THREE.Mesh(geometry, material);
-                    slab.rotation.x = -Math.PI / 2;
-                    slab.position.y = (k + 1) * 3;
-                    group.add(slab);
-                }
-
-                group.position.x = (i - 1) * (boxSize + spacing);
-                group.position.z = (j - 1) * (boxSize + spacing);
-
-                scene.add(group);
-                boxes.push(group);
+                createBox(i, j);
             }
         }
 
         // Animation loop
         function animate() {
             requestAnimationFrame(animate);
+
+            boxes.forEach(function(group) {
+                if (group.userData.animating) {
+                    // Randomly adjust target height
+                    if (Math.random() < 0.01) {
+                        group.userData.targetHeight = Math.random() * (maxHeight - minHeight) + minHeight;
+                    }
+
+                    // Smoothly animate height towards targetHeight
+                    var delta = (group.userData.targetHeight - group.userData.height) * 0.02;
+                    group.userData.height += delta;
+
+                    updateSlabs(group);
+                }
+            });
 
             renderer.render(scene, camera);
         }
