--- a/index.html
+++ b/index.html
@@ -2,15 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Three.js Animated Slab Grid</title>
+    <title>Three.js Interactive Slab Grid</title>
     <style>
         body { margin: 0; overflow: hidden; }
         canvas { display: block; }
+        #label {
+            position: absolute;
+            color: white;
+            font-size: 24px;
+            pointer-events: none;
+            display: none;
+            text-shadow: 1px 1px 2px black;
+        }
     </style>
 </head>
 <body>
+    <div id="label"></div>
     <!-- Include Three.js library from CDN -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
+    <!-- Include OrbitControls (optional) -->
+    <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/controls/OrbitControls.js"></script>
     <script>
         // Basic setup
         var scene = new THREE.Scene();
@@ -22,7 +33,24 @@
 
         var renderer = new THREE.WebGLRenderer({ antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
+        renderer.shadowMap.enabled = true;
         document.body.appendChild(renderer.domElement);
+
+        // OrbitControls for camera movement
+        var controls = new THREE.OrbitControls(camera, renderer.domElement);
+
+        // Add lights
+        var ambientLight = new THREE.AmbientLight(0x404040); // soft white light
+        scene.add(ambientLight);
+
+        var directionalLight = new THREE.DirectionalLight(0xffffff, 0.8);
+        directionalLight.position.set(100, 100, 100);
+        directionalLight.castShadow = true;
+        scene.add(directionalLight);
+
+        // Raycaster for mouse interactions
+        var raycaster = new THREE.Raycaster();
+        var mouse = new THREE.Vector2();
 
         // Create a grid of boxes with slabs
         var gridSize = 3;
@@ -32,24 +60,44 @@
         var minHeight = 15;
         var maxHeight = 50;
 
-        function createBox(i, j) {
+        var labels = [
+            "About Me", "Projects", "Contact",
+            "Blog", "Gallery", "Services",
+            "Testimonials", "FAQ", "Careers"
+        ];
+
+        // Classy color palette
+        var colors = [
+            0xD7263D, // Crimson
+            0x02182B, // Dark Blue
+            0x0197F6, // Sky Blue
+            0xFBB13C, // Orange
+            0x04724D, // Forest Green
+            0x8C1EFF, // Purple
+            0xFF6F61, // Coral
+            0x5D3A3A, // Brown
+            0xF0A202  // Gold
+        ];
+
+        function createBox(i, j, index) {
             var group = new THREE.Group();
             group.userData = {
                 height: Math.random() * (maxHeight - minHeight) + minHeight,
                 targetHeight: Math.random() * (maxHeight - minHeight) + minHeight,
-                animating: true
+                animating: true,
+                label: labels[index]
             };
 
             group.position.x = (i - 1) * (boxSize + spacing);
             group.position.z = (j - 1) * (boxSize + spacing);
 
-            updateSlabs(group);
+            updateSlabs(group, colors[index]);
 
             scene.add(group);
             boxes.push(group);
         }
 
-        function updateSlabs(group) {
+        function updateSlabs(group, color) {
             // Remove existing slabs
             while (group.children.length > 0) {
                 var child = group.children.pop();
@@ -61,19 +109,27 @@
             var numSlabs = Math.floor(height / 3);
 
             var geometry = new THREE.PlaneGeometry(boxSize, boxSize);
-            var material = new THREE.MeshBasicMaterial({ color: 0x00ff00, side: THREE.DoubleSide });
+            var material = new THREE.MeshPhongMaterial({
+                color: color,
+                side: THREE.DoubleSide,
+                shininess: 50
+            });
 
             for (var k = 0; k < numSlabs; k++) {
                 var slab = new THREE.Mesh(geometry, material);
                 slab.rotation.x = -Math.PI / 2;
                 slab.position.y = (k + 1) * 3;
+                slab.receiveShadow = true;
+                slab.castShadow = true;
                 group.add(slab);
             }
         }
 
+        var index = 0;
         for (var i = 0; i < gridSize; i++) {
             for (var j = 0; j < gridSize; j++) {
-                createBox(i, j);
+                createBox(i, j, index);
+                index++;
             }
         }
 
@@ -81,7 +137,7 @@
         function animate() {
             requestAnimationFrame(animate);
 
-            boxes.forEach(function(group) {
+            boxes.forEach(function(group, idx) {
                 if (group.userData.animating) {
                     // Randomly adjust target height
                     if (Math.random() < 0.01) {
@@ -92,7 +148,7 @@
                     var delta = (group.userData.targetHeight - group.userData.height) * 0.02;
                     group.userData.height += delta;
 
-                    updateSlabs(group);
+                    updateSlabs(group, colors[idx]);
                 }
             });
 
@@ -100,6 +156,76 @@
         }
 
         animate();
+
+        // Mouse events
+        window.addEventListener('mousemove', onMouseMove, false);
+        window.addEventListener('click', onMouseClick, false);
+
+        function onMouseMove(event) {
+            event.preventDefault();
+
+            mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
+            mouse.y = - (event.clientY / window.innerHeight) * 2 + 1;
+
+            raycaster.setFromCamera(mouse, camera);
+
+            var intersects = raycaster.intersectObjects(scene.children, true);
+
+            if (intersects.length > 0) {
+                var intersectedObject = intersects[0].object;
+                var intersectedGroup = intersectedObject.parent;
+
+                boxes.forEach(function(group) {
+                    if (group === intersectedGroup) {
+                        group.userData.animating = false;
+                        showLabel(event.clientX, event.clientY, group.userData.label);
+                    } else {
+                        group.userData.animating = true;
+                    }
+                });
+            } else {
+                boxes.forEach(function(group) {
+                    group.userData.animating = true;
+                });
+                hideLabel();
+            }
+        }
+
+        function onMouseClick(event) {
+            event.preventDefault();
+
+            mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
+            mouse.y = - (event.clientY / window.innerHeight) * 2 + 1;
+
+            raycaster.setFromCamera(mouse, camera);
+
+            var intersects = raycaster.intersectObjects(scene.children, true);
+
+            if (intersects.length > 0) {
+                var intersectedObject = intersects[0].object;
+                var intersectedGroup = intersectedObject.parent;
+                var sectionName = intersectedGroup.userData.label;
+
+                // Handle navigation to the section
+                alert("Navigating to " + sectionName);
+                // Replace the alert with actual navigation logic
+                // For example: window.location.href = 'your-url-here';
+            }
+        }
+
+        // Label display
+        var labelDiv = document.getElementById('label');
+
+        function showLabel(x, y, text) {
+            labelDiv.style.left = x + 'px';
+            labelDiv.style.top = y - 30 + 'px';
+            labelDiv.textContent = text;
+            labelDiv.style.display = 'block';
+        }
+
+        function hideLabel() {
+            labelDiv.style.display = 'none';
+        }
 
         // Handle window resize
         window.addEventListener('resize', function() {
