--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Three.js Animated Slab Grid with Shading</title>
+    <title>Three.js Animated Slab Grid with Enhanced Lighting</title>
     <style>
         body { margin: 0; overflow: hidden; }
         canvas { display: block; }
@@ -23,16 +23,26 @@
         var renderer = new THREE.WebGLRenderer({ antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
         renderer.shadowMap.enabled = true;
+        renderer.shadowMap.type = THREE.PCFSoftShadowMap;
         document.body.appendChild(renderer.domElement);
 
         // Add lights for shading
-        var ambientLight = new THREE.AmbientLight(0x404040, 0.8); // Soft ambient light
+        var ambientLight = new THREE.AmbientLight(0x404040, 1); // Soft ambient light
         scene.add(ambientLight);
 
-        var directionalLight = new THREE.DirectionalLight(0xffffff, 0.8);
+        var directionalLight = new THREE.DirectionalLight(0xffffff, 1);
         directionalLight.position.set(100, 100, 100);
         directionalLight.castShadow = true;
+        directionalLight.shadow.mapSize.width = 1024;
+        directionalLight.shadow.mapSize.height = 1024;
+        directionalLight.shadow.camera.near = 0.5;
+        directionalLight.shadow.camera.far = 500;
         scene.add(directionalLight);
+
+        var pointLight = new THREE.PointLight(0xffffff, 0.8);
+        pointLight.position.set(50, 100, 50);
+        pointLight.castShadow = true;
+        scene.add(pointLight);
 
         // Create a grid of boxes with slabs
         var gridSize = 3;
@@ -83,7 +93,7 @@
             var numSlabs = Math.floor(height / 3);
 
             var geometry = new THREE.PlaneGeometry(boxSize, boxSize);
-            var material = new THREE.MeshPhongMaterial({ color: color, side: THREE.DoubleSide, shininess: 50 });
+            var material = new THREE.MeshStandardMaterial({ color: color, side: THREE.DoubleSide, metalness: 0.3, roughness: 0.6 });
 
             for (var k = 0; k < numSlabs; k++) {
                 var slab = new THREE.Mesh(geometry, material);
